# blog-rust

./: Cargo.toml  Dockerfile  README.md  compose.yaml  webapp-deployment.yaml
.github/workflows/: ci.yml
src/: main.rs
src/ctx/: ctx.rs  mod.rs
src/error/: article_error.rs  auth_error.rs  client_error.rs  login_error.rs  mod.rs  user_error.rs
src/middleware/: auth.rs  mod.rs
src/models/: article.rs  mod.rs  user.rs
src/routes/: article.rs  authentication.rs  login.rs  mod.rs  static_routes.rs  user.rs
src/services/: db.rs
tests/: quick_test.rs
