[package]
name = "simple-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
mongodb = "2.3"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = "1"
chrono = "0.4" # Used for setting DateTimes
serde = "1" # Used in the Map Data into Structs section
futures = "0.3.28"
futures-util = "0.3.30"
serde_json = "1.0.116"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["fs"] }
lazy-regex = "3.1.0"
async-trait = "0.1.80"
strum_macros = "0.26.2"
uuid = "1.8.0"

[dev-dependencies]
anyhow = "1.0.82"
httpc-test = "0.1.9"
